# genart

./: .gitignore  README.md  pyproject.toml
genart/: animation_test.py
noise/: neon.py  perlin.py  perlin_params_template.yaml
