[tool.poetry]
name = "genart"
version = "0.1.0"
description = ""
authors = ["douglas-m-harvey <douglas_harvey@tiscali.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.9.2"
jupyter = "^1.0.0"
pillow = "^10.2.0"
ffmpeg-python = "^0.2.0"
scikit-image = "^0.22.0"
pyqt6 = "^6.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
